--- a/IoT/IoTHubDevice.Console/IoTHubDevice.Console.csproj
+++ b/IoT/IoTHubDevice.Console/IoTHubDevice.Console.csproj
@@ -8,12 +8,28 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Storage.Blobs" Version="12.19.1" />
     <PackageReference Include="Microsoft.Azure.Devices.Client" Version="1.42.3" />
     <PackageReference Include="Opc.UaFx.Client" Version="2.41.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\IoTHubDevice.Device\IoTHubDevice.Device.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DesignTime>True</DesignTime>
+      <AutoGen>True</AutoGen>
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
+
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
   </ItemGroup>
 
 </Project>
